fixing side panel alignment

--- a/css/styles.css
+++ b/css/styles.css
@@ -21,19 +21,19 @@ header {
   font-weight: normal;
 }
 
-/* line 5, C:/Projects/GitHub/Resume_site/scss/_modules.scss */
+/* line 4, C:/Projects/GitHub/Resume_site/scss/_modules.scss */
 header {
-  margin: .3rem;
+  margin: 0.3rem;
 }
 
-/* line 8, C:/Projects/GitHub/Resume_site/scss/_modules.scss */
+/* line 7, C:/Projects/GitHub/Resume_site/scss/_modules.scss */
 header h1 {
   text-align: center;
   margin-bottom: 0;
   font-size: 1.7rem;
 }
 
-/* line 14, C:/Projects/GitHub/Resume_site/scss/_modules.scss */
+/* line 13, C:/Projects/GitHub/Resume_site/scss/_modules.scss */
 header p {
   font-size: 1.13rem;
   text-align: center;
@@ -41,12 +41,12 @@ header p {
   margin-bottom: 3rem;
 }
 
-/* line 22, C:/Projects/GitHub/Resume_site/scss/_modules.scss */
+/* line 21, C:/Projects/GitHub/Resume_site/scss/_modules.scss */
 main {
   padding: 0.5rem;
 }
 
-/* line 26, C:/Projects/GitHub/Resume_site/scss/_modules.scss */
+/* line 25, C:/Projects/GitHub/Resume_site/scss/_modules.scss */
 section.main-info {
   display: grid;
   grid-gap: 5px;
@@ -56,24 +56,24 @@ section.main-info {
   margin: 1rem;
 }
 
-/* line 34, C:/Projects/GitHub/Resume_site/scss/_modules.scss */
+/* line 33, C:/Projects/GitHub/Resume_site/scss/_modules.scss */
 aside.side-panel {
   background-color: #045de9;
   background-image: linear-gradient(315deg, #045de9 0%, #09c6f9 74%);
   width: 90%;
   border: 2px solid;
-  margin: .5rem;
+  margin: 0.5rem;
 }
 
-/* line 41, C:/Projects/GitHub/Resume_site/scss/_modules.scss */
+/* line 40, C:/Projects/GitHub/Resume_site/scss/_modules.scss */
 aside.side-panel h2 {
   color: #6209b4;
   text-align: center;
-  margin-top: .3rem;
+  margin-top: 0.3rem;
   margin-bottom: 0.2rem;
 }
 
-/* line 47, C:/Projects/GitHub/Resume_site/scss/_modules.scss */
+/* line 46, C:/Projects/GitHub/Resume_site/scss/_modules.scss */
 aside.side-panel ul {
   color: #530f0f;
   width: auto;
@@ -85,29 +85,36 @@ aside.side-panel ul {
   margin-bottom: 0;
 }
 
-/* line 58, C:/Projects/GitHub/Resume_site/scss/_modules.scss */
+/* line 57, C:/Projects/GitHub/Resume_site/scss/_modules.scss */
 aside.side-panel li {
   padding-bottom: 0.5rem;
 }
 
-/* line 64, C:/Projects/GitHub/Resume_site/scss/_modules.scss */
+/* line 62, C:/Projects/GitHub/Resume_site/scss/_modules.scss */
 #side-panel-skills {
   text-align: center;
   text-decoration: none;
 }
 
-/* line 68, C:/Projects/GitHub/Resume_site/scss/_modules.scss */
+/* line 66, C:/Projects/GitHub/Resume_site/scss/_modules.scss */
 #side-panel-skills ul {
   list-style: none;
   font-size: 1rem;
 }
 
-/* line 75, C:/Projects/GitHub/Resume_site/scss/_modules.scss */
+/* line 73, C:/Projects/GitHub/Resume_site/scss/_modules.scss */
 #side-panel-certs p {
   margin-top: 0;
+  padding-right: 0;
+  padding-left: 10px;
 }
 
-/* line 84, C:/Projects/GitHub/Resume_site/scss/_modules.scss */
+/* line 81, C:/Projects/GitHub/Resume_site/scss/_modules.scss */
+#side-panel-certs ul {
+  text-align: center;
+}
+
+/* line 87, C:/Projects/GitHub/Resume_site/scss/_modules.scss */
 #skills ul {
   display: grid;
   grid-template-columns: repeat(2, 1fr);
@@ -115,19 +122,19 @@ aside.side-panel li {
   margin-bottom: 2rem;
 }
 
-/* line 93, C:/Projects/GitHub/Resume_site/scss/_modules.scss */
+/* line 96, C:/Projects/GitHub/Resume_site/scss/_modules.scss */
 .job-history h3 {
   margin-bottom: 0;
 }
 
-/* line 97, C:/Projects/GitHub/Resume_site/scss/_modules.scss */
+/* line 100, C:/Projects/GitHub/Resume_site/scss/_modules.scss */
 .job-history p {
-  margin-top: .2rem;
+  margin-top: 0.2rem;
 }
 
-/* line 101, C:/Projects/GitHub/Resume_site/scss/_modules.scss */
+/* line 104, C:/Projects/GitHub/Resume_site/scss/_modules.scss */
 .job-history li {
-  margin: .5rem;
+  margin: 0.5rem;
 }
 
 /*# sourceMappingURL=../css/styles.map */
