--- a/scss/_modules.scss
+++ b/scss/_modules.scss
@@ -1,104 +1,107 @@
 @import "mixins.scss";
 @import "variables.scss";
 
-
 header {
-	margin: .3rem;
+  margin: 0.3rem;
 
-	h1 {
-		text-align: center;
-		margin-bottom: 0;
-		font-size: $f-size * 1.7;
-	}
+  h1 {
+    text-align: center;
+    margin-bottom: 0;
+    font-size: $f-size * 1.7;
+  }
 
-	p {
-		font-size: $f-size * 1.13;
-		text-align: center;
-		margin-top: 0;
-		margin-bottom: 3rem;
-	}
+  p {
+    font-size: $f-size * 1.13;
+    text-align: center;
+    margin-top: 0;
+    margin-bottom: 3rem;
+  }
 }
 
 main {
-	padding: $pad-half;
+  padding: $pad-half;
 }
 
 section.main-info {
-	@include grid($rowz, $colz, $gap);
-	grid-template-columns: 30% 60%;
-	grid-column-start: 2;
-	width: auto;
-	margin: 1rem;
+  @include grid($rowz, $colz, $gap);
+  grid-template-columns: 30% 60%;
+  grid-column-start: 2;
+  width: auto;
+  margin: 1rem;
 }
 
 aside.side-panel {
-	background-color: #045de9;
-	background-image: linear-gradient(315deg, #045de9 0%, #09c6f9 74%);
-	width: 90%;
-	border: 2px solid;
-	margin: .5rem;
+  background-color: #045de9;
+  background-image: linear-gradient(315deg, #045de9 0%, #09c6f9 74%);
+  width: 90%;
+  border: 2px solid;
+  margin: 0.5rem;
 
-	h2 {
-		color: $purple-header;
-		text-align: center;
-		margin-top: .3rem;
-		margin-bottom: 0.2rem;
-	} 
-	ul {
-		color: #530f0f;
-		width: auto;
-		line-height: 1.3;
-		font-size: $f-size * 1;
-		padding: 17px;
-		padding-top: 0;
-		margin-top: 0;
-		margin-bottom: 0;
-	}
+  h2 {
+    color: $purple-header;
+    text-align: center;
+    margin-top: 0.3rem;
+    margin-bottom: 0.2rem;
+  }
+  ul {
+    color: #530f0f;
+    width: auto;
+    line-height: 1.3;
+    font-size: $f-size * 1;
+    padding: 17px;
+    padding-top: 0;
+    margin-top: 0;
+    margin-bottom: 0;
+  }
 
-	li {
-		padding-bottom: $pad-half;
-	}
-	
+  li {
+    padding-bottom: $pad-half;
+  }
 }
 
 #side-panel-skills {
-	text-align: center;
-	text-decoration: none;
+  text-align: center;
+  text-decoration: none;
 
-	ul {
-		list-style: none;
-		font-size: $f-size;
-	}
+  ul {
+    list-style: none;
+    font-size: $f-size;
+  }
 }
 
 #side-panel-certs {
-	p {
-		margin-top: 0;
-		// font-size: 18px;
-	}
+  p {
+    margin-top: 0;
+    padding-right: 0;
+    padding-left: 10px;
+
+    // font-size: 18px;
+  }
+
+  ul {
+    text-align: center;
+  }
 }
 
-
 #skills {
-
-	ul {
-		display: grid;
-		grid-template-columns: repeat(2, 1fr);
-		grid-gap: 8px;
-		margin-bottom: 2rem;
-	}
+  ul {
+    display: grid;
+    grid-template-columns: repeat(2, 1fr);
+    grid-gap: 8px;
+    margin-bottom: 2rem;
+  }
 }
 
 .job-history {
-	h3 {
-		margin-bottom: 0;
-	}
+  h3 {
+    margin-bottom: 0;
+  }
 
-	p {
-		margin-top: .2rem;
-	}
+  p {
+    margin-top: 0.2rem;
+  }
 
-	li {
-		margin: .5rem;
-	}
+  li {
+    margin: 0.5rem;
+  }
 }
